--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta name="copyright" content="© 2024 El July Marroquinería">
   <meta property="og:title" content="El July Marroquinería - Tu tienda online de e-liquids" />
   <meta property="og:description" content="Web Site modatotal" />
-  <meta property="og:image" content="https://modatotal.netlify.app/static/media/logoinvertido.75f18251022e0f387c98.png" />
-  <meta property="og:url" content="https://modatotal.netlify.app" />
+  <meta property="og:image" content="https://july-marroquineria.netlify.app/static/media/logoinvertido.75f18251022e0f387c98.png" />
+  <meta property="og:url" content="https://july-marroquineria.netlify.app" />
   
 
 <!-- Inyectar CSP con nonce dinámico -->
@@ -29,7 +29,7 @@
     const metaTag = document.querySelector('meta[http-equiv="Content-Security-Policy"]');
     if (metaTag) {
       metaTag.setAttribute("content", `
-        default-src 'self' https://sweetalert.js.org https://modatotal.netlify.app https://elgatonegropremium-back-production.up.railway.app http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001;
+        default-src 'self' https://sweetalert.js.org https://july-marroquineria.netlify.app https://elgatonegropremium-back-production.up.railway.app http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001;
         script-src 'self' 'nonce-${nonce}' https://sweetalert.js.org https://http2.mlstatic.com https://api.mercadopago.com https://sdk.mercadopago.com https://apis.google.com https://accounts.google.com https://ajax.googleapis.com;
         style-src 'self' 'nonce-${nonce}' https://fonts.googleapis.com https://accounts.google.com/gsi/style;
         font-src 'self' https://fonts.gstatic.com;
@@ -37,7 +37,7 @@
         img-src 'self' data: https://cdn-icons-png.flaticon.com https://sweetalert.js.org https://res.cloudinary.com;
         frame-src 'self' https://accounts.google.com https://api.mercadopago.com https://sdk.mercadopago.com https://www.mercadopago.com;
         media-src 'self' https://res.cloudinary.com;
-        form-action 'self' https://elgatonegropremium-back-production.up.railway.app https://modatotal.netlify.app http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001;
+        form-action 'self' https://elgatonegropremium-back-production.up.railway.app https://july-marroquineria.netlify.app http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001;
         object-src 'none';
       `);
     }
@@ -49,7 +49,7 @@
   <meta http-equiv="Content-Security-Policy">
 
   <!-- Reporte de CSP -->
-  <meta http-equiv="Report-To" content='{"group":"csp-endpoint","max_age":10886400,"endpoints":[{"url":"https://modatotal.netlify.appcsp-report"}]}' />
+  <meta http-equiv="Report-To" content='{"group":"csp-endpoint","max_age":10886400,"endpoints":[{"url":"https://july-marroquineria.netlify.appcsp-report"}]}' />
 
   <!-- Otros encabezados de seguridad -->
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
