--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
   <meta property="og:title" content="El July Marroquinería - Tu tienda en línea de productos premium para gatos">
   <meta property="og:description" content="Web Site modatotal">
   <meta property="og:image"
-    content="https://modatotal.netlify.appstatic/media/logoinvertido.75f18251022e0f387c98.png">
-  <meta property="og:url" content="https://modatotal.netlify.app">
+    content="https://july-marroquineria.netlify.appstatic/media/logoinvertido.75f18251022e0f387c98.png">
+  <meta property="og:url" content="https://july-marroquineria.netlify.app">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>El July Marroquinería - Tienda en línea de e-liquids nacionales El July Marroquinería</title>
