la csp dinamica llega tarde, pasamos a static meta csp

--- a/index.html
+++ b/index.html
@@ -7,55 +7,36 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web Site modatotal e-commerce" />
   <meta name="keywords" content="El July Marroquinería, e-liquids, tienda online, Posadas, Misiones, Argentina" />
-  <meta name="author" content="eduardocarlostoledo@gmail.com">
-  <meta name="copyright" content="© 2024 El July Marroquinería">
+  <meta name="author" content="eduardocarlostoledo@gmail.com" />
+  <meta name="copyright" content="© 2024 El July Marroquinería" />
+
   <meta property="og:title" content="El July Marroquinería - Tu tienda online de e-liquids" />
   <meta property="og:description" content="Web Site modatotal" />
   <meta property="og:image" content="https://july-marroquineria.netlify.app/static/media/logoinvertido.75f18251022e0f387c98.png" />
   <meta property="og:url" content="https://july-marroquineria.netlify.app" />
-  
 
-<!-- Inyectar CSP con nonce dinámico -->
-<script>
-  (function () {
-    const nonce = Math.random().toString(36).substring(2, 15);
+  <!-- ✅ Content Security Policy recomendada -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' https://sweetalert.js.org https://http2.mlstatic.com https://api.mercadopago.com https://sdk.mercadopago.com https://accounts.google.com https://ajax.googleapis.com https://accounts.google.com/gsi/client;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com/gsi/style;
+    font-src 'self' https://fonts.gstatic.com;
+    connect-src 'self' https://elgatonegropremium-back-production.up.railway.app https://api.mercadopago.com https://sdk.mercadopago.com https://accounts.google.com;
+    img-src 'self' data: https://cdn-icons-png.flaticon.com https://sweetalert.js.org https://res.cloudinary.com;
+    frame-src 'self' https://accounts.google.com https://api.mercadopago.com https://sdk.mercadopago.com https://www.mercadopago.com;
+    media-src 'self' https://res.cloudinary.com;
+    form-action 'self' https://elgatonegropremium-back-production.up.railway.app https://july-marroquineria.netlify.app;
+    object-src 'none';
+  " />
 
-    // Añadir nonce a scripts con marcador
-    document.querySelectorAll("script[nonce-placeholder]").forEach((el) => {
-      el.setAttribute("nonce", nonce);
-    });
+  <!-- CSP Report URI -->
+  <meta http-equiv="Report-To" content='{"group":"csp-endpoint","max_age":10886400,"endpoints":[{"url":"https://july-marroquineria.netlify.app/csp-report"}]}' />
 
-    // Si existe una meta CSP, actualizá su contenido
-    const metaTag = document.querySelector('meta[http-equiv="Content-Security-Policy"]');
-    if (metaTag) {
-      metaTag.setAttribute("content", `
-        default-src 'self' https://sweetalert.js.org https://july-marroquineria.netlify.app https://elgatonegropremium-back-production.up.railway.app http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001;
-        script-src 'self' 'nonce-${nonce}' https://sweetalert.js.org https://http2.mlstatic.com https://api.mercadopago.com https://sdk.mercadopago.com https://apis.google.com https://accounts.google.com https://ajax.googleapis.com;
-        style-src 'self' 'nonce-${nonce}' https://fonts.googleapis.com https://accounts.google.com/gsi/style;
-        font-src 'self' https://fonts.gstatic.com;
-        connect-src 'self' https://api.mercadopago.com https://sdk.mercadopago.com https://accounts.google.com https://elgatonegropremium-back-production.up.railway.app  http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001 http://localhost:3001;
-        img-src 'self' data: https://cdn-icons-png.flaticon.com https://sweetalert.js.org https://res.cloudinary.com;
-        frame-src 'self' https://accounts.google.com https://api.mercadopago.com https://sdk.mercadopago.com https://www.mercadopago.com;
-        media-src 'self' https://res.cloudinary.com;
-        form-action 'self' https://elgatonegropremium-back-production.up.railway.app https://july-marroquineria.netlify.app http://localhost:5173 https://localhost:5173 https://localhost:5173 http://localhost:3001;
-        object-src 'none';
-      `);
-    }
-  })();
-</script>
-
-
-  <!-- Content Security Policy -->
-  <meta http-equiv="Content-Security-Policy">
-
-  <!-- Reporte de CSP -->
-  <meta http-equiv="Report-To" content='{"group":"csp-endpoint","max_age":10886400,"endpoints":[{"url":"https://july-marroquineria.netlify.appcsp-report"}]}' />
-
-  <!-- Otros encabezados de seguridad -->
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta name="referrer" content="strict-origin-when-cross-origin">
-  <meta http-equiv="Permissions-Policy" content="geolocation=(self), camera=(), microphone=()">
+  <!-- 🔐 Seguridad extra -->
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta http-equiv="Permissions-Policy" content="geolocation=(self), camera=(), microphone=()" />
 
   <title>El July Marroquinería - Tienda en línea de e-liquids nacionales</title>
 
