--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web Site modatotal e-commerce" />
-  <meta name="keywords" content="El July Marroquinería, e-liquids, tienda online, Posadas, Misiones, Argentina" />
-  <meta name="author" content="eduardocarlostoledo@gmail.com" />
-  <meta name="copyright" content="© 2024 El July Marroquinería" />
+  <meta name="description" content="Web Site July Marroquinería - Hallpa e-commerce" />
+  <meta name="keywords" content="July Marroquinería - Hallpa, Fabricantes de Bolsos, Bandoleras, Carteras, Mochilas, tienda online, Santiago del Estero, Argentina" />
+  <meta name="author" content="toledoconsultora.com" />
+  <meta name="copyright" content="© 2024 July Marroquinería - Hallpa" />
 
-  <meta property="og:title" content="El July Marroquinería - Tu tienda online de e-liquids" />
-  <meta property="og:description" content="Web Site modatotal" />
-  <meta property="og:image" content="https://july-marroquineria.netlify.app/static/media/logoinvertido.75f18251022e0f387c98.png" />
+  <meta property="og:title" content="July Marroquinería - Hallpa - Fabricantes de Bolsos, Bandoleras, Carteras, Mochilas" />
+  <meta property="og:description" content="Web Site July Marroquinería - Hallpa" />
+  <meta property="og:image" content="https://july-marroquineria.netlify.app/assets/huallpa-logo-DVeACbd9.png" />
   <meta property="og:url" content="https://july-marroquineria.netlify.app" />
 
   <!-- ✅ Content Security Policy recomendada -->
@@ -38,7 +38,7 @@
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta http-equiv="Permissions-Policy" content="geolocation=(self), camera=(), microphone=()" />
 
-  <title>El July Marroquinería - Tienda en línea de e-liquids nacionales</title>
+  <title>July Marroquinería - Hallpa - Tienda en línea de Fabricantes de Bolsos, Bandoleras, Carteras, Mochilas nacionales</title>
 
   <!-- Scripts externos -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
