--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web Site modatotal" />
-  <meta name="keywords"
-    content="El July Marroquinería, e-liquids, liquidos para cigarrillos electronicos , tienda online de e-liquids, Posadas, Misiones, Argentina" />
-  <meta name="author" content="https://toledoconsultora.com/">
-  <meta name="copyright" content="© 2024 El July Marroquinería">
-  <meta property="og:title" content="El July Marroquinería - Tu tienda en línea de productos premium para gatos">
-  <meta property="og:description" content="Web Site modatotal">
-  <meta property="og:image"
-    content="https://july-marroquineria.netlify.appstatic/media/logoinvertido.75f18251022e0f387c98.png">
-  <meta property="og:url" content="https://july-marroquineria.netlify.app">
+  <meta name="description" content="Web Site July Marroquinería - Hallpa e-commerce" />
+  <meta name="keywords" content="July Marroquinería - Hallpa, Fabricantes de Bolsos, Bandoleras, Carteras, Mochilas, tienda online, Santiago del Estero, Argentina" />
+  <meta name="author" content="toledoconsultora.com" />
+  <meta name="copyright" content="© 2024 July Marroquinería - Hallpa" />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>El July Marroquinería - Tienda en línea de e-liquids nacionales El July Marroquinería</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <meta property="og:title" content="July Marroquinería - Hallpa - Fabricantes de Bolsos, Bandoleras, Carteras, Mochilas" />
+  <meta property="og:description" content="Web Site July Marroquinería - Hallpa" />
+  <meta property="og:image" content="https://july-marroquineria.netlify.app/assets/huallpa-logo-DVeACbd9.png" />
+  <meta property="og:url" content="https://july-marroquineria.netlify.app" />
+
+  <!-- ✅ Content Security Policy recomendada -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' https://sweetalert.js.org https://http2.mlstatic.com https://api.mercadopago.com https://sdk.mercadopago.com https://accounts.google.com https://ajax.googleapis.com https://accounts.google.com/gsi/client;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com/gsi/style;
+    font-src 'self' https://fonts.gstatic.com;
+    connect-src 'self' https://elgatonegropremium-back-production.up.railway.app https://api.mercadopago.com https://sdk.mercadopago.com https://accounts.google.com;
+    img-src 'self' data: https://cdn-icons-png.flaticon.com https://sweetalert.js.org https://res.cloudinary.com;
+    frame-src 'self' https://accounts.google.com https://api.mercadopago.com https://sdk.mercadopago.com https://www.mercadopago.com;
+    media-src 'self' https://res.cloudinary.com;
+    form-action 'self' https://elgatonegropremium-back-production.up.railway.app https://july-marroquineria.netlify.app;
+    object-src 'none';
+  " />
+
+  <!-- CSP Report URI -->
+  <meta http-equiv="Report-To" content='{"group":"csp-endpoint","max_age":10886400,"endpoints":[{"url":"https://july-marroquineria.netlify.app/csp-report"}]}' />
+
+  <!-- 🔐 Seguridad extra -->
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta http-equiv="Permissions-Policy" content="geolocation=(self), camera=(), microphone=()" />
+
+  <title>July Marroquinería - Hallpa - Tienda en línea de Fabricantes de Bolsos, Bandoleras, Carteras, Mochilas nacionales</title>
+
+  <!-- Scripts externos -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://sdk.mercadopago.com/js/v2"></script>
-  <script type="text/javascript" src="../src/components/mercadopago.js" defer></script>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script type="module" src="./src/components/mercadopago/mercadopago.js" defer></script>
+
+  <!-- FAVICONS -->
+<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
+<link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg">
+
+<!-- WEB MANIFEST -->
+<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+<meta name="theme-color" content="#ffc0cb" />
+
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </html>
