--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://sdk.mercadopago.com/js/v2"></script>
   <script type="module" src="./src/components/mercadopago/mercadopago.js" defer></script>
+
+  
+  <!-- FAVICONS -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+
+<!-- WEB MANIFEST -->
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#ffc0cb" />
+
 </head>
 
 <body>
