--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,13 @@
   <script type="module" src="./src/components/mercadopago/mercadopago.js" defer></script>
 
   <!-- FAVICONS -->
-<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
-<link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
-<link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
 <!-- WEB MANIFEST -->
-<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+<link rel="manifest" href="/site.webmanifest">
 <meta name="theme-color" content="#ffc0cb" />
 
 </head>
