--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image" content="https://july-marroquineria.netlify.app/assets/huallpa-logo-DVeACbd9.png" />
   <meta property="og:url" content="https://july-marroquineria.netlify.app" />
 
-  <!-- ✅ Content Security Policy recomendada -->
+  <!-- ✅ Content Security Policy recomendada public -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' https://sweetalert.js.org https://http2.mlstatic.com https://api.mercadopago.com https://sdk.mercadopago.com https://accounts.google.com https://ajax.googleapis.com https://accounts.google.com/gsi/client;
